--- a/.github/workflows/gradle.yml
+++ b/.github/workflows/gradle.yml
@@ -26,28 +26,16 @@ jobs:
       uses: gradle/actions/setup-gradle@v4
 
     - name: Build and run tests
-      run: ./gradlew clean build
+      run: ./gradlew clean test
 
-    - name: Upload test results artifact
-      uses: actions/upload-artifact@v3
+    - name: Upload test results
+      uses: actions/upload-artifact@v3.1.2
       with:
         name: test-results
-        path: build/reports/tests/test
+        path: build/test-results/test
 
-  dependency-submission:
-
-    runs-on: ubuntu-latest
-    permissions:
-      contents: write
-
-    steps:
-    - uses: actions/checkout@v4
-
-    - name: Set up JDK 17
-      uses: actions/setup-java@v4
+    - name: Upload test reports
+      uses: actions/upload-artifact@v3.1.2
       with:
-        java-version: '17'
-        distribution: 'temurin'
-
-    - name: Generate and submit dependency graph
-      uses: gradle/actions/dependency-submission@v4
+        name: test-reports
+        path: build/reports/tests/test
