--- a/.github/workflows/gradle.yml
+++ b/.github/workflows/gradle.yml
@@ -1,41 +1,39 @@
-name: Java CI with Gradle
+name: Run Automation Tests
 
 on:
   push:
-    branches: [ "main" ]
+    branches: [main]
   pull_request:
-    branches: [ "main" ]
+    branches: [main]
 
 jobs:
-  build:
-
+  run-tests:
     runs-on: ubuntu-latest
-    permissions:
-      contents: read
 
     steps:
-    - uses: actions/checkout@v4
+    - name: Checkout repo
+      uses: actions/checkout@v4
 
-    - name: Set up JDK 17
+    - name: Setup JDK 17
       uses: actions/setup-java@v4
       with:
-        java-version: '17'
-        distribution: 'temurin'
+        java-version: 17
+        distribution: temurin
 
     - name: Setup Gradle
       uses: gradle/actions/setup-gradle@v4
 
-    - name: Build and run tests
+    - name: Run tests
       run: ./gradlew clean test
 
     - name: Upload test results
-      uses: actions/upload-artifact@v3.1.2
+      uses: actions/upload-artifact@v3
       with:
         name: test-results
         path: build/test-results/test
 
     - name: Upload test reports
-      uses: actions/upload-artifact@v3.1.2
+      uses: actions/upload-artifact@v3
       with:
         name: test-reports
         path: build/reports/tests/test
