--- a/.github/workflows/web-auto.yml
+++ b/.github/workflows/web-auto.yml
@@ -29,7 +29,7 @@ jobs:
 
       #excute gradlew for running cucumber test
     - name: Execute Test
-      run: ./gradlew cucumber
+      run: ./gradlew clean test
           
     - name: Setup Gradle
       uses: gradle/actions/setup-gradle@af1da67850ed9a4cedd57bfd976089dd991e2582 # v4.0.0
