--- a/.github/workflows/gradle.yml
+++ b/.github/workflows/gradle.yml
@@ -1,18 +1,26 @@
-name: UI Automation Tests
+name: Automation Tests (API + UI)
 
 on:
   push:
     branches:
       - main
   pull_request:
+    branches:
+      - main
 
 jobs:
   test:
     runs-on: ubuntu-latest
 
     steps:
-    - name: Checkout code
+    - name: Checkout repository
       uses: actions/checkout@v3
+
+    - name: Setup Java 17
+      uses: actions/setup-java@v3
+      with:
+        java-version: 17
+        distribution: temurin
 
     - name: Install dependencies for Chrome
       run: |
@@ -27,22 +35,25 @@ jobs:
     - name: Setup ChromeDriver matching Chrome version
       run: |
         CHROME_VERSION=$(google-chrome --version | grep -oP '\d+\.\d+\.\d+\.\d+')
-        echo "Chrome version: $CHROME_VERSION"
         CHROME_MAJOR_VERSION=$(echo $CHROME_VERSION | cut -d '.' -f 1)
-        echo "Chrome major version: $CHROME_MAJOR_VERSION"
         CHROMEDRIVER_VERSION=$(curl -sS "https://chromedriver.storage.googleapis.com/LATEST_RELEASE_$CHROME_MAJOR_VERSION")
-        echo "ChromeDriver version: $CHROMEDRIVER_VERSION"
         wget -N "https://chromedriver.storage.googleapis.com/${CHROMEDRIVER_VERSION}/chromedriver_linux64.zip" -P ~/
         unzip -o ~/chromedriver_linux64.zip -d ~/
         sudo mv -f ~/chromedriver /usr/local/bin/chromedriver
         sudo chmod +x /usr/local/bin/chromedriver
         chromedriver --version
 
-    - name: Set DISPLAY variable for headless testing
+    - name: Set DISPLAY environment variable for headless testing
       run: echo "DISPLAY=:99" >> $GITHUB_ENV
 
-    - name: Run tests
+    - name: Run API and UI tests
       run: ./gradlew clean test
       env:
-        JAVA_HOME: /opt/hostedtoolcache/Java_Temurin-Hotspot_jdk/17.0.15-6/x64
+        JAVA_HOME: ${{ steps.setup-java.outputs.path }}
         DISPLAY: :99
+
+    - name: Upload test reports
+      uses: actions/upload-artifact@v3
+      with:
+        name: test-report
+        path: build/reports/tests/test  # sesuaikan dengan folder hasil test di projectmu
