--- a/build.gradle
+++ b/build.gradle
@@ -12,11 +12,32 @@ repositories {
 dependencies {
     implementation 'org.seleniumhq.selenium:selenium-java:4.10.0'
     implementation 'io.github.bonigarcia:webdrivermanager:5.3.2'
-    testImplementation 'io.github.bonigarcia:webdrivermanager:5.4.1'
-    testImplementation 'io.github.bonigarcia:webdrivermanager:5.8.0'
+    testImplementation 'io.github.bonigarcia:webdrivermanager:5.8.0' // hapus duplikat
     testImplementation 'io.cucumber:cucumber-java:6.10.4'
     testImplementation 'io.cucumber:cucumber-junit:6.10.4'
     testImplementation 'junit:junit:4.13.2'
+}
+
+sourceSets {
+    cucumber {
+        java {
+            srcDirs = ['src/test/java']
+        }
+        resources {
+            srcDirs = ['src/test/resources']
+        }
+        compileClasspath += sourceSets.test.output + configurations.testRuntimeClasspath
+        runtimeClasspath += output + compileClasspath
+    }
+}
+
+task cucumberTest(type: Test) {
+    description = 'Runs Cucumber tests'
+    group = 'verification'
+
+    testClassesDirs = sourceSets.cucumber.output.classesDirs
+    classpath = sourceSets.cucumber.runtimeClasspath
+    useJUnit()
 }
 
 test {
