--- a/.github/workflows/gradle.yml
+++ b/.github/workflows/gradle.yml
@@ -1,60 +1,34 @@
-name: Web Automation Workflow
+name: Run Automation Tests
 
 on:
   push:
-    branches: [ "main" ]
+    branches: [ main ]
   pull_request:
-    branches: [ "main" ]
-  workflow_dispatch:
+    branches: [ main ]
 
 jobs:
-  build:
-    name: Build & Test
+  run-tests:
     runs-on: ubuntu-latest
 
     steps:
-      - name: Checkout Code
-        uses: actions/checkout@v4
+      - name: Checkout code
+        uses: actions/checkout@v3
 
-      - name: Set up JDK 17
-        uses: actions/setup-java@v4
+      - name: Set up Java 17
+        uses: actions/setup-java@v3
         with:
-          java-version: '17'
           distribution: 'temurin'
+          java-version: '17'
 
-      - name: Set up Gradle
-        uses: gradle/actions/setup-gradle@v4
-
-      - name: Make gradlew executable
+      - name: Grant execute permission for gradlew
         run: chmod +x gradlew
 
-      - name: Set up ChromeDriver
-        uses: nanasess/setup-chromedriver@v2.2.2
-
-      - name: Run Cucumber Tests
+      - name: Run UI Web automation test
         run: ./gradlew clean cucumberTest
 
-      - name: Upload Test Report
-        uses: actions/upload-artifact@v4
+      - name: Upload test results
+        if: always()
+        uses: actions/upload-artifact@v3
         with:
-          name: cucumber-report
-          path: target/cucumber-report.html
-
-  dependency-submission:
-    name: Dependency Submission
-    runs-on: ubuntu-latest
-    permissions:
-      contents: write
-
-    steps:
-      - name: Checkout Code
-        uses: actions/checkout@v4
-
-      - name: Set up JDK 17
-        uses: actions/setup-java@v4
-        with:
-          java-version: '17'
-          distribution: 'temurin'
-
-      - name: Submit Dependency Graph
-        uses: gradle/actions/dependency-submission@v4
+          name: test-results
+          path: build/reports/tests/test
