--- a/.github/workflows/UI test.yml
+++ b/.github/workflows/UI test.yml
@@ -13,7 +13,7 @@ jobs:
     runs-on: ubuntu-latest
 
     steps:
-    - name: Checkout repo
+    - name: Checkout UI repo
       uses: actions/checkout@v3
 
     - name: Setup JDK 11
@@ -22,5 +22,8 @@ jobs:
         distribution: 'temurin'
         java-version: '11'
 
-    - name: Build and run tests
+    - name: Give execute permission to gradlew
+      run: chmod +x ./gradlew
+
+    - name: Build and run UI tests
       run: ./gradlew clean test
