--- a/.github/workflows/UI test.yml
+++ b/.github/workflows/UI test.yml
@@ -5,30 +5,32 @@ on:
     branches:
       - main
   pull_request:
-    branches:
-      - main
 
 jobs:
-  ui-tests:
+  test-ui:
     runs-on: ubuntu-latest
 
     steps:
-    - name: Checkout code
+    - name: Checkout repo
       uses: actions/checkout@v3
 
     - name: Setup JDK 11
       uses: actions/setup-java@v3
       with:
-        distribution: 'temurin'
         java-version: '11'
+        distribution: 'temurin'
 
     - name: Install Chrome
-      uses: browser-actions/setup-chrome@v1
+      run: |
+        sudo apt-get update
+        sudo apt-get install -y google-chrome-stable
 
-    - name: Install ChromeDriver
-      uses: browser-actions/setup-chrome@v1.7.3
-          
-    - name: Make gradlew executable
+    - name: Setup ChromeDriver
+      uses: nanasess/setup-chromedriver@v1.2.1
+      with:
+        chrome-version: 'latest'
+
+    - name: Grant execute permission to gradlew
       run: chmod +x ./gradlew
 
     - name: Run tests
