--- a/.github/workflows/UI test.yml
+++ b/.github/workflows/UI test.yml
@@ -28,4 +28,8 @@ jobs:
       run: chmod +x ./gradlew
 
     - name: Run tests
-      run: ./gradlew clean test
+      run: ./gradlew cucumber
+
+    - name: archive test result
+      run: actions/upload-artifact@v4.6.2
+     
