--- a/.github/workflows/UI test.yml
+++ b/.github/workflows/UI test.yml
@@ -1,35 +1,33 @@
-name: UI Test
+name: Run UI Tests
 
 on:
   push:
-    branches:
-      - main
+    branches: [ main ]
   pull_request:
-  workflow_dispatch:
+    branches: [ main ]
 
 jobs:
-  test-ui:
+  test:
     runs-on: ubuntu-latest
 
     steps:
-    - name: Checkout repo
-      uses: actions/checkout@v4
+      - name: Checkout repository
+        uses: actions/checkout@v3
 
-    - name: Setup JDK 11
-      uses: actions/setup-java@v4
-      with:
-        java-version: '11'
-        distribution: 'temurin'
+      - name: Set up JDK 11
+        uses: actions/setup-java@v3
+        with:
+          java-version: '11'
+          distribution: 'temurin'
 
-    - name: Setup Chrome
-      uses: browser-actions/setup-chrome@v1.7.3
+      - name: Install Google Chrome
+        run: |
+          wget https://dl.google.com/linux/direct/google-chrome-stable_current_amd64.deb
+          sudo apt install -y ./google-chrome-stable_current_amd64.deb
+          google-chrome --version
 
-    - name: Make gradlew executable
-      run: chmod +x ./gradlew
+      - name: Grant execute permission to Gradle wrapper
+        run: chmod +x ./gradlew
 
-    - name: Run tests
-      run: ./gradlew test
-
-    - name: archive test result
-      run: actions/upload-artifact@v4.6.2
-     
+      - name: Run tests
+        run: ./gradlew clean test
