--- a/.github/workflows/gradle.yml
+++ b/.github/workflows/gradle.yml
@@ -1,42 +1,61 @@
-name: Java CI with Gradle
+name: UI Test
+
 
 on:
   push:
     branches: [ "main" ]
   pull_request:
     branches: [ "main" ]
+  workflow_dispatch:
 
 jobs:
   build:
-
+    name: Build & Test
     runs-on: ubuntu-latest
-    
 
     steps:
-    - uses: actions/checkout@v4
-    - name: Set up JDK 17
-      uses: actions/setup-java@v4
-      with:
-        java-version: '17'
-        distribution: 'temurin'
+      - name: Checkout Code
+        uses: actions/checkout@v4
 
-    - name: Setup Gradle
-      uses: gradle/actions/setup-gradle@af1da67850ed9a4cedd57bfd976089dd991e2582 # v4.0.0
+      - name: Set up JDK 17
+        uses: actions/setup-java@v4
+        with:
+          java-version: '17'
+          distribution: 'temurin'
 
-    - name: Build with Gradle Wrapper
-      run: ./gradlew build
+      - name: Set up Gradle
+        uses: gradle/actions/setup-gradle@v4
 
-    - name: Excute
-      run: chmod +x gradlew
+      - name: Make gradlew executable
+        run: chmod +x gradlew
 
-    - name: Setup Chrome
-      uses: browser-actions/setup-chrome@v1.7.3
+      - name: Set up ChromeDriver
+        uses: nanasess/setup-chromedriver@v2.2.2
 
-    - name: run test
-      run: ./gradlew test
- 
-    
+      - name: Run Cucumber Tests
+        run: ./gradlew clean cucumberTest
 
+      - name: Upload Test Report
+        uses: actions/upload-artifact@v4
+        with:
+          name: cucumber-report
+          path: target/cucumber-report.html
 
- 
+  dependency-submission:
+    name: Dependency Submission
+    runs-on: ubuntu-latest
+    permissions:
+      contents: write
 
+    steps:
+      - name: Checkout Code
+        uses: actions/checkout@v4
+
+      - name: Set up JDK 17
+        uses: actions/setup-java@v4
+        with:
+          java-version: '17'
+          distribution: 'temurin'
+
+      - name: Submit Dependency Graph
+        uses: gradle/actions/dependency-submission@v4
